# calparse

./: README.md  calparse.py  justfile  main.py  pyproject.toml
.github/workflows/: test-branch.yml
lib/: cal.py  display.py
