[project]
name = "calparse"
version = "0.1.0"
description = "Parses iCal URLs in different ways"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icalevents>=0.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]